WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78933
REGRESSION (
r107606
): Copy Link writes malformed WebURLsWithTitlesPboardType data to the pasteboard
https://bugs.webkit.org/show_bug.cgi?id=78933
Summary
REGRESSION (r107606): Copy Link writes malformed WebURLsWithTitlesPboardType ...
Enrica Casucci
Reported
2012-02-17 13:58:23 PST
The correct format for WebURLsithTitlesPboard should be: <array> <array> <string>
http://www.panic.com/blog/2011/07/the-worlds-first-emoji-domain/
</string> </array> <array> <string>The Worldâ..s First Emoji Domain</string> </array> </array> </plist> Now it's putting: <array> <string>
http://www.panic.com/blog/2011/07/the-worlds-first-emoji-domain/
</string> <string>The Worldâ..s First Emoji Domain</string> </array> <
rdar://problem/10874553
>
Attachments
Patch
(1.61 KB, patch)
2012-02-17 14:04 PST
,
Enrica Casucci
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2012-02-17 14:04:12 PST
Created
attachment 127655
[details]
Patch
Enrica Casucci
Comment 2
2012-02-17 14:42:46 PST
Thanks for the review!
Enrica Casucci
Comment 3
2012-02-17 14:44:52 PST
http://trac.webkit.org/changeset/108128
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug