REGRESSION (r107606): Copy Link writes malformed WebURLsWithTitlesPboardType data to the pasteboard. https://bugs.webkit.org/show_bug.cgi?id=78933 <rdar://problem/10874553>

For this format, the data needs to be placed in the pasteboard as array of arrays
of strings. Currently is it stored as array of strings, which causes the code
that uses this format to break.

Reviewed by Ryosuke Niwa.

* platform/mac/PlatformPasteboardMac.mm:
(WebCore::PlatformPasteboard::setPathnamesForType):



Canonical link: https://commits.webkit.org/95959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108128 268f45cc-cd09-0410-ab3c-d52691b4dbfc